--- a/css/addevent.css
+++ b/css/addevent.css
@@ -2,6 +2,11 @@
     position: relative;
     height: 380px;
     box-shadow: 0 0 1px 0 rgb(0, 0, 0);
+
+    background-color: #FFFFFF;
+    -moz-user-select: text;
+    -khtml-user-select: text;
+    user-select: text;
 }
 
 .input-title {
