--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,3 +1,7 @@
+.calendarlayout {
+
+}
+
 .calendargrid {
     border-bottom-width: 0px;
     border-collapse: collapse;
@@ -16,7 +20,7 @@
 .calendar-header {
     /*background-image: -moz-linear-gradient(90deg, rgb(76, 186, 255) 0%, rgb(76, 186, 255) 0%, rgb(49, 154, 213) 0%, rgb(64, 113, 183) 100%);*/
     /*background-image: -webkit-linear-gradient(90deg, rgb(76, 186, 255) 0%, rgb(76, 186, 255) 0%, rgb(49, 154, 213) 0%, rgb(64, 113, 183) 100%);*/
-    background-color:#009999;
+    background-color: #009999;
     border: 1px #bbb solid;
     color: rgb(255, 255, 255);
     font-family: "Arial";
@@ -101,7 +105,7 @@
 
 .calendar-selecteddate H1 {
     background: url(/img/mypart.png);
-    color:#006666;
+    color: #006666;
     font-family: "Arial";
     font-size: 30px;
     font-weight: bold;
@@ -112,7 +116,7 @@
 
 .calendar-selecteddate H2 {
     background: url(/img/mypart.png);
-    color:#009999;
+    color: #009999;
     font-family: "Arial";
     font-size: 14px;
     font-weight: bold;
@@ -122,7 +126,7 @@
 }
 
 .calendar-selecteddate H3 {
-    color:#33cccc;
+    color: #33cccc;
     font-family: "Arial";
     font-size: 10px;
     line-height: 2;
@@ -141,7 +145,7 @@
 
 .calendar-selecteddate ul li {
     background: transparent;
-    color:#009999;
+    color: #009999;
     display: list-item;
     font-family: "Arial";
     font-size: 12px;
