--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,10 @@
 
 body {
     background-color: rgba(102, 204, 204, 0.15);
+
+    -moz-user-select: none;
+    -khtml-user-select: none;
+    user-select: none;
 }
 
 .container, .content, .userbar, .footer, .contentcontent {
@@ -16,7 +20,7 @@ body {
 }
 
 .content {
-    background-color:#FFFFFF;
+    background-color: #FFFFFF;
 }
 
 
