--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,12 @@ body {
 
 .container, .content, .userbar, .footer, .contentcontent {
     width: 1020px;
+
 }
 
 .container {
     position: relative;
+    box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);
 
 }
 
