--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
     background-image: url(/img/footer.jpg);
     position: absolute;
     height: 283px;
-    box-shadow: 0 0 1px 0 rgb(0, 0, 0);
+    box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);
 }
 
 .footer ul {
