--- a/css/style.css
+++ b/css/style.css
@@ -18,11 +18,13 @@ body {
 .container {
     position: relative;
     box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);
-
+    background-color: #FFFFFF;
 }
 
 .content {
     background-color: #FFFFFF;
+    margin-bottom: 10px;
+
 }
 
 
