--- a/css/footer.css
+++ b/css/footer.css
@@ -4,7 +4,7 @@
     position: relative;
     min-height: 450px;
     box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);
-    margin-top: 30px;
+    /*margin-top: 30px;*/
 }
 
 .footer-top {
