--- a/css/addevent.css
+++ b/css/addevent.css
@@ -1,92 +1,61 @@
-.addivent-block {
+.input-title-event, .group-choice-title {
     position: relative;
-    min-height: 200px;
-    background-color: #FFFFFF;
-    -moz-user-select: text;
-    -khtml-user-select: text;
-    user-select: text;
-}
-
-.left-block, .right-block {
-    float: left;
-    position: relative;
-    /*border: dotted;*/
-    min-height: 150px;
-    width: 500px;
-    margin-left: 0px;
-    margin-right: 4px;
-}
-
-.right-block {
-    top: 20px;
-    background-color: #33cccc;
-}
-
-.right-text {
-    font-size: 16px;
-    font-style: italic;
-    font-family: Verdana;
     margin-top: 20px;
-    color: #FFFFFF;
-}
-
-.addlabel {
-    color: #006666;
-    text-align: center;
-    height: 30px;
-    width: 400px;
-    background-color: #33cccc;
-    position: relative;
-    top: 20px;
-    font-family: Verdana;
-    font-size: 18px;
     margin-left: 20px;
-}
-
-.input-title {
-    margin-left: 20px;
-    margin-top: 40px;
-    position: relative;
-}
-
-.submit-but {
     height: 25px;
-}
-
-.submit-buttons {
-
-    position: relative;
-    margin-top: 30px;
-    margin-left: -20px;
-}
-
-.submit-but li {
-    font-family: verdana;
-    width: 100px;
-    height: 25px;
-    cursor: pointer;
-    list-style: none;
-    display: inline-block;
-    text-align: center;
-    font-size: 13px;
+    width: 350px;
     background-color: #006363;
-    margin-right: 1px;
+    font-family: verdana;
+    font-size: 18px;
+    color: #FFFFFF;
+    text-align: center;
+}
+
+.input-line-event {
+    margin-left: 20px;
+    border: inset;
+    border-color: #33cccc;
+    width: 835px;
+
+}
+
+.input-text-event {
+    margin-left: 20px;
+    border: inset;
+    border-color: #33cccc;
+    width: 831px;
+
+}
+
+.input-text-title {
     position: relative;
-    line-height: 25px;
-    font-weight: bold;
-
+    margin-top: 20px;
+    margin-left: 20px;
+    height: 25px;
+    width: 310px;
+    background-color: #006363;
+    font-family: verdana;
+    font-size: 18px;
+    color: #FFFFFF;
+    text-align: center;
 }
 
-.submit-but li:hover {
-    background-color: #ff7400;
+.group-choice-title {
+    width: 280px;
 }
 
-.submit-but a:link, .submit-but a:visited, .submit-but a:active {
-    color: #efefef;
-    text-decoration: none;
+.group-choice, .input-buttons-event {
+    margin-left: 20px;
+    margin-bottom: 20px;
 }
 
-input[type="submit"] {
+.group-choice {
+    border: inset;
+    border-color: #33cccc;
+    width: 97px;
+}
+
+.button-addevent {
     line-height: 20px;
     top: 5px;
     width: 100px;
@@ -99,10 +68,12 @@ input[type="submit"] {
     font-weight: bold;
 }
 
-input[type="submit"]:hover {
+.button-addevent:hover{
     background-color: #ff7400;
     cursor: pointer;
 }
+
+
 
 
 
