Пересмотрена концепция вьюх в сторону модульности

--- a/css/auth.css
+++ b/css/auth.css
@@ -8,7 +8,7 @@
     float: left;
     position: absolute;
     right: 60px;
-    top: 53px;
+    /*top: 53px;*/
     font-family: verdana, arial, sans-serif;
     display: inline-block;
     text-align: right;
