--- a/css/calendar.css
+++ b/css/calendar.css
@@ -1,7 +1,3 @@
-.calendarlayout {
-
-}
-
 .calendargrid {
     border-bottom-width: 0px;
     border-collapse: collapse;
@@ -33,7 +29,7 @@
     position: absolute;
     text-align: center;
     top: 0px;
-    width: 209px;
+    width: 343px;
 }
 
 .calendarlayout {
@@ -137,7 +133,7 @@
     font-family: "Arial";
     font-size: 10px;
     line-height: 2;
-    padding-top: 13px;
+    padding-top: 30px;
     text-align: center;
     text-shadow: 0.5px 0.866px 0px rgb(255, 255, 255);
 }
@@ -198,7 +194,7 @@
 .forw-arrow {
     background-image: url(/img/arrow-calright.png);
     position: absolute;
-    left: 180px;
+    left: 315px;
     top: 13px;
     width: 15px;
     height: 15px;
@@ -206,4 +202,21 @@
 
 .back-arrow:hover, .forw-arrow {
     cursor: pointer;
+}
+
+.curdate {
+    position: relative;
+    text-align: center;
+    font-size: 14px;
+    font-weight: bold;
+}
+
+.curdate a {
+    text-decoration: none;
+    color: #33cccc;
+}
+
+.curdate a:hover {
+    text-decoration: none;
+    color: #ff7400;
 }
