--- a/css/footer.css
+++ b/css/footer.css
@@ -1,7 +1,8 @@
 .footer {
     position: relative;
     min-height: 450px;
-    box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);
+    width: 1020px;
+    /*box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);*/
 }
 
 .footer-top {
