--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
     position: relative;
     min-height: 450px;
     width: 1020px;
-    /*box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);*/
+    box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);
 }
 
 .footer-top {
@@ -16,13 +16,10 @@
     position: relative;
     top: 30px;
     height: 200px;
-    /*border: dotted;*/
 }
 
 .learn-label {
     text-align: center;
-    font-family: Verdana;
-    /*font-weight: bold;*/
     color: #FFFFFF;
     font-size: 28px;
     height: 40px;
@@ -30,7 +27,6 @@
 
 .learn-text {
     text-align: center;
-    font-family: Verdana;
     color: #006363;
     font-size: 18px;
     height: 30px;
@@ -59,7 +55,6 @@
     background-color: #006666;
     position: relative;
     line-height: 45px;
-    font-family: Verdana;
 }
 
 .learn-button li:hover {
@@ -79,7 +74,6 @@
 
 .footer-bottom ul {
     position: relative;
-    /*top: 85%;*/
     float: right;
 }
 
@@ -92,7 +86,6 @@
     cursor: pointer;
     list-style: none;
     padding-top: 8px;
-    font-family: verdana;
     display: inline-block;
     text-align: center;
     font-size: 10px;
@@ -128,7 +121,7 @@
     font-style: italic;
     font-size: 14px;
     margin-top: -25px;
-    /*display: table-row;*/
+    display: table-row;
 }
 
 .footer-contacts li img {
@@ -141,14 +134,12 @@
     padding-top: 20px;
     padding-left: 20px;
     top: 20px;
-    font-family: verdana;
     font-style: normal;
     font-size: 24px;
     color: #FFFFFF;
 }
 
 .footer-bottom-left {
-    /*border: dotted;*/
     width: 300px;
     height: 235px;
     position: relative;
@@ -156,7 +147,6 @@
 }
 
 .footer-bottom-center {
-    /*border: dotted;*/
     width: 300px;
     position: relative;
     float: left;
@@ -165,7 +155,6 @@
 }
 
 .footer-bottom-right {
-    /*border: dotted;*/
     width: 300px;
     position: relative;
     float: left;
@@ -177,7 +166,6 @@
     padding-top: 20px;
     padding-left: 20px;
     top: 20px;
-    font-family: verdana;
     font-style: normal;
     font-size: 24px;
     color: #FFFFFF;
@@ -187,7 +175,6 @@
     padding-top: 20px;
     padding-left: 20px;
     top: 20px;
-    font-family: verdana;
     font-style: italic;
     font-size: 12px;
     color: #FFFFFF;
