--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,8 @@ body {
     position: relative;
     box-shadow: 1px 1px 5px 0px rgba(50, 50, 50, 1);
     background-color: #FFFFFF;
+    font-family: Verdana, Helvetica, Arial, sans-serif;;
+
 }
 
 
