--- a/css/userbar.css
+++ b/css/userbar.css
@@ -1,20 +1,21 @@
 .userbar {
     top: 1px;
-    background-color: #66cccc;
     height: 50px;
     position: relative;
+    background-color: #66cccc;
 }
 
 .eventbuttons {
     height: 50px;
     width: inherit;
+    font-size: 14px;
+    font-weight: bold;
 }
 
 .mainbutton {
-    /*top: 2px;*/
     padding: 0;
     margin: 0;
-    bottom: 0px;
+    bottom: 0;
     position: relative;
 }
 
@@ -26,8 +27,7 @@
     list-style: none;
     display: block;
     text-align: center;
-    font-size: 18px;
-    font-family: verdana;
+
     background-color: #006666;
     margin-right: 1px;
     position: relative;
@@ -47,7 +47,7 @@
     position: relative;
     padding: 0;
     margin: 0;
-    bottom: 0px;
+    bottom: 0;
     left: 455px !important;
     top: -33px;
     height: 33px;
@@ -63,7 +63,7 @@
     list-style: none;
     display: block;
     text-align: center;
-    font-size: 13px;
+    font-size: 12px;
     background-color: #009999;
     margin-right: 1px;
     position: relative;
@@ -77,7 +77,6 @@
 }
 
 .usergroup li:hover {
-    /*background-color: #33cccc;*/
     background-color: #ff7400;
 }
 
@@ -95,9 +94,8 @@
     position: absolute;
     width: 25px;
     height: 25px;
-    left: 430px;
-    top: 22px;
-
+    left: 425px;
+    top: 20px;
 }
 
 .rightarrow {
@@ -105,8 +103,8 @@
     position: absolute;
     width: 25px;
     height: 25px;
-    top: 22px;
-    left: 960px;
+    top: 20px;
+    left: 965px;
 }
 
 .leftarrow:hover, .rightarrow:hover {
