--- a/css/header.css
+++ b/css/header.css
@@ -31,6 +31,7 @@
     color: #efefef;
 }
 
+/******************************Навигационное меню***********************************/
 .buttonbar-content {
     list-style: none;
     position: relative;
@@ -73,3 +74,34 @@
     text-decoration: none;
     color: #006363;
 }
+
+/*TESTSTSTSTS*/
+.nav-wrap {
+    float: right;
+}
+
+#navigation {
+    margin: 0 auto;
+    list-style: none;
+    position: relative;
+    width: 420px;
+}
+
+#navigation li {
+    display: inline;
+}
+
+#navigation li a {
+    color: #FFFFFF;
+    font-size: 14px;
+    display: block;
+    float: left;
+    padding: 6px 10px 4px 10px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+
+#navigation li a:hover {
+    color: #006363;
+}
+
