--- a/css/style.css
+++ b/css/style.css
@@ -5,9 +5,9 @@
 body {
     background-color: rgba(102, 204, 204, 0.15);
 
-    -moz-user-select: none;
-    -khtml-user-select: none;
-    user-select: none;
+    /*-moz-user-select: none;*/
+    /*-khtml-user-select: none;*/
+    /*user-select: none;*/
 }
 
 .container, .content, .userbar, .footer, .contentcontent {
